[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gept"
version = "0.1.0"
description = "A CLI application that looks up OSRS GE prices."
readme = "README.md"
authors = [{ name = "Josh Cannella", email = "josh.cannella@yahoo.com" }]
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
gept = "gept.__main__:cli"